# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Bzlmod module definition for nvcf-ai-api-gateway-service (vanity-gateway).

Single Go binary at the repo root (main.go) plus internal/, gateway/,
middleware/, pool/, router/ packages. No private NVIDIA modules; deps
resolve via Gazelle's go_deps extension from go.mod.

The umbrella nvcf/nvcf consumes this subtree under
src/invocation-plane-services/vanity-gateway as a synthetic import;
this file is also picked up there but the umbrella's own root
MODULE.bazel is what Bazel uses end-to-end.
"""

module(
    name = "nvcf_ai_api_gateway",
    version = "0.0.1",
)

# ============================================================================
# OCI containers (multi-arch). Mirrors the canonical Phase B scaffold.
# ============================================================================
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

# rules_pkg's pkg_tar runs through a Python builder, which pulls in
# rules_python's hermetic interpreter. CI runs as root in the bazel-ci
# container, and rules_python rejects root-user setup by default.
bazel_dep(name = "rules_python", version = "1.4.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

# ============================================================================
# Go
# ============================================================================
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.6")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# nvcf-go ships .proto files inside its module, and Gazelle (when
# fetching the module via go_deps) generates proto_library +
# go_proto_library targets that reference protoc-gen-openapiv2
# annotations. Those annotations are not vendored as Bazel packages
# in the fetched module, so the analysis phase fails with "BUILD file
# not found in directory protoc-gen-openapiv2/options". The
# pre-generated .pb.go files in the module are already adequate for
# what this service uses; disable proto-aware build generation for
# this dep so Gazelle treats the .pb.go files as plain Go sources.
# Same workaround grpc-proxy uses.
go_deps.gazelle_override(
    directives = ["gazelle:proto disable_global"],
    path = "github.com/NVIDIA/nvcf-go",
)

# Auto-managed by `bazel mod tidy`. The list below is a placeholder;
# `bazel mod tidy` reconciles against the actual transitive closure of
# go.mod.
use_repo(
    go_deps,
    "com_github_carlmjohnson_versioninfo",
    "com_github_felixge_httpsnoop",
    "com_github_fsnotify_fsnotify",
    "com_github_go_chi_chi_v5",
    "com_github_go_chi_cors",
    "com_github_go_logr_zapr",
    "com_github_goccy_go_json",
    "com_github_hellofresh_health_go_v5",
    "com_github_magiconair_properties",
    "com_github_nvidia_nvcf_go",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_stretchr_testify",
    "com_github_valyala_bytebufferpool",
    "in_gopkg_yaml_v3",
    "io_k8s_sigs_controller_runtime",
    "io_k8s_sigs_yaml",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_prometheus",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_grpc",
    "org_golang_x_exp",
    "org_golang_x_net",
    "org_golang_x_sync",
    "org_uber_go_zap",
)

# ============================================================================
# Prebuilt protoc toolchain. Some transitive go_deps (grpc-gateway-v2,
# nvcf-go, etc.) declare proto rules; without this, rules_go's proto
# toolchain resolution fails. Pulls the official prebuilt protoc
# binary rather than building the C++ compiler from source.
# ============================================================================
bazel_dep(name = "toolchains_protoc", version = "0.6.1")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v29.0",
)

# ============================================================================
# C++ cross-compilation (multi-arch container builds).
# ============================================================================
zig = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_arm64_gnu.2.38",
)

# ============================================================================
# OCI base image. Hardened distroless/go matching the rest of the
# Phase B Go fleet.
# ============================================================================
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_go",
    digest = "sha256:6be4473eca4e8a5fdf8d7103a4d35708f5538bb5f7a58f0d12a257bdf362334f",
    image = "urm.nvidia.com/sw-gpu-ucs-hardened-docker/distroless/go",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    www_authenticate_challenges = {
        "urm.nvidia.com": "Bearer realm=\"https://urm.nvidia.com/artifactory/api/docker/null/v2/token\",service=\"urm.nvidia.com\",scope=\"repository:{repository}:pull\"",
    },
)
use_repo(
    oci,
    "distroless_go",
    "distroless_go_linux_amd64",
    "distroless_go_linux_arm64_v8",
)
