# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = [
        "admin.go",
        "agent_skill.go",
        "apikey.go",
        "cluster.go",
        "cluster_agent.go",
        "cluster_registration.go",
        "cluster_utils.go",
        "deploy.go",
        "exit_code_error.go",
        "function.go",
        "init.go",
        "json_output.go",
        "refresh.go",
        "registry.go",
        "root.go",
        "self_hosted.go",
        "self_hosted_control_plane_profile.go",
        "self_hosted_check.go",
        "self_hosted_control_plane.go",
        "self_hosted_down.go",
        "self_hosted_helm_runtime.go",
        "self_hosted_install.go",
        "self_hosted_preflight_tools.go",
        "self_hosted_status.go",
        "self_hosted_uninstall.go",
        "self_hosted_up.go",
        "status.go",
        "undeploy.go",
        "version.go",
    ],
    importpath = "nvcf-cli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//src/clis/nvcf-cli/internal/agentskill",
        "//src/clis/nvcf-cli/internal/apikeys",
        "//src/clis/nvcf-cli/internal/client",
        "//src/clis/nvcf-cli/internal/clusteragent",
        "//src/clis/nvcf-cli/internal/k8s",
        "//src/clis/nvcf-cli/internal/logging",
        "//src/clis/nvcf-cli/internal/selfhosted",
        "//src/clis/nvcf-cli/internal/selfhosted/controlplaneprofile",
        "//src/clis/nvcf-cli/internal/selfhosted/auth",
        "//src/clis/nvcf-cli/internal/selfhosted/installlock",
        "//src/clis/nvcf-cli/internal/selfhosted/kubectx",
        "//src/clis/nvcf-cli/internal/selfhosted/progress",
        "//src/clis/nvcf-cli/internal/selfhosted/status",
        "//src/clis/nvcf-cli/internal/selfhosted/teardown",
        "//src/clis/nvcf-cli/internal/state",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apiextensions_apiserver//pkg/client/clientset/clientset",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//tools/clientcmd",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_term//:term",
    ],
)

go_test(
    name = "cmd_test",
    srcs = [
        "agent_skill_test.go",
        "cluster_agent_test.go",
        "cluster_registration_test.go",
        "exit_code_error_test.go",
        "function_llm_model_test.go",
        "main_test.go",
        "registry_test.go",
        "self_hosted_check_test.go",
        "self_hosted_control_plane_test.go",
        "self_hosted_down_test.go",
        "self_hosted_install_test.go",
        "self_hosted_status_test.go",
        "self_hosted_test.go",
        "self_hosted_uninstall_test.go",
        "self_hosted_up_test.go",
    ],
    embed = [":cmd"],
    deps = [
        "//src/clis/nvcf-cli/internal/client",
        "//src/clis/nvcf-cli/internal/clusteragent",
        "//src/clis/nvcf-cli/internal/selfhosted",
        "//src/clis/nvcf-cli/internal/selfhosted/controlplaneprofile",
        "//src/clis/nvcf-cli/internal/selfhosted/auth",
        "//src/clis/nvcf-cli/internal/selfhosted/progress",
        "//src/clis/nvcf-cli/internal/selfhosted/teardown",
        "//src/clis/nvcf-cli/internal/state",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apiextensions_apiserver//pkg/client/clientset/clientset",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//kubernetes/fake",
    ],
)
